k8s/deploy_notes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notes
  name: notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
        - image: notes:1
          name: notes
          ports:
            - containerPort: 8080
      dnsPolicy: Default
