k8s/deploy_weather.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather
  name: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
        - image: weather:1
          name: weather
          ports:
            - containerPort: 8080
      dnsPolicy: Default
