k8s/serv_notes.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: notes
  name: notes
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: notes
  type: NodePort
