k8s/serv_weather.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather
  name: weather
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: weather
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weather-internal
  name: weather-internal
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: weather
  type: ClusterIP
